--- a/index.css
+++ b/index.css
@@ -165,10 +165,12 @@ h6 {
 .love{
   color: dodgerblue;
   font-family: 'Pinyon Script', cursive;
-  font-size: 4vw;
+  font-size: 6vw;
+  line-height: normal;
+
 }
 #love {
-  font-size: 7vw;
+  font-size: 9vw;
 }
 
 #weddingGifts {
@@ -242,10 +244,11 @@ margin-left: 49vw;
 }
 
   #details {
-    color: rgb(25, 30,40);
+    color: rgb(25, 30, 40);
     font-size: 1.9vw;
     line-height: 3vw;
     text-align: center;
+    margin-bottom: 7vw;
   }
 
   #shuttle {
